--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ stoecker@fias.uni-frankfurt.de<br>
 
       </div>
     </div>
-
+<img src="./Bild1.png" alt="abc" id="pic" />
     <footer class="site-footer">
 
  
