--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <div style="width: 100%; float:left">
 
 <h2> Responsible at FIAS board </h2>
-Prof. Dr. Dr. hc. mult. Horst Stoecker<br>
+<a href="https://www.fias.science/de/fellows/detail/stoecker-horst/">Prof. Dr. Dr. hc. mult. Horst Stoecker</a><br>
 stoecker@fias.uni-frankfurt.de<br>
 
 <p> </p>
