--- a/group.html
+++ b/group.html
@@ -86,8 +86,9 @@ Tunan Fan</p>
 
 
 <h2 id="alumni">Former</h2>
-<p>Stefan Schramm</p> <br />
-<p> Elisabeth Zeyen</p>
+<p>Stefan Schramm<br />
+    Elisabeth Zeyen</p> 
+
 
 
 
