--- a/group.html
+++ b/group.html
@@ -87,7 +87,8 @@ Tunan Fan</p>
 
 <h2 id="alumni">Former</h2>
 <p>Stefan Schramm<br />
-    Elisabeth Zeyen, KIT</p> 
+    Elisabeth Zeyen, KIT <br />
+    Rosana Gomes</p> 
 
 
 
